# taoverse

./: .gitignore  LICENSE  README.md  pyproject.toml
src/taoverse/metagraph/: metagraph_syncer.py  miner_iterator.py  utils.py
src/taoverse/model/: auto.py  data.py  model_tracker.py  model_updater.py  pretrained.py  utils.py
src/taoverse/model/competition/: competition_tracker.py  data.py  epsilon.py  eval.py  utils.py
src/taoverse/model/eval/: task.py
src/taoverse/model/storage/: local_model_store.py  model_metadata_store.py  remote_model_store.py
src/taoverse/model/storage/chain/: chain_model_metadata_store.py
src/taoverse/model/storage/disk/: disk_model_store.py  utils.py
src/taoverse/model/storage/hugging_face/: hugging_face_model_store.py
src/taoverse/model/tts/: auto.py  e2tts.py
src/taoverse/model/tts/backbones/: cfm.py  unett.py
src/taoverse/model/tts/modules/: e2tts.py  f5tts.py
src/taoverse/model/tts/utils/: e2tts.py
src/taoverse/utilities/: logging.py  perf_monitor.py  utils.py
tests/metagraph/: test_metagraph_syncer.py  test_metagraph_utils.py  test_miner_iterator.py
tests/model/: test_model_tracker.py  test_model_updater.py  test_model_utils.py
tests/model/competition/: test_competition_tracker.py  test_competition_utils.py  test_epsilon.py
tests/model/eval/: test_normalization.py  test_task.py
tests/model/storage/: fake_remote_model_store.py
tests/model/storage/disk/: test_disk_model_store.py  test_disk_utils.py
tests/utilities/: test_perf_monitor.py  test_utils.py
